<resources>
    <string name="app_name">CloudSiri</string>
    <string name="action_settings">Settings</string>
    <string name="todo">todo</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="upload_file">Encrypt/Upload</string>
    <string name="save_menu">Save</string>
    <string name="add_file">Add File</string>
    <string name="log_out">Log Out</string>
    <string name="deleteFileInfo">Delete Info</string>
    <string name="textview">TextView</string>
    <string name="decrypt">Show Files</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">OK</string>
    <string name="enter_password_dialog">Enter Password</string>
    <string name="contact">Forgot password? Contact Support </string>
    <string name="splach_text">Ficha Siri na CloudSiri</string>
    <string name="icon">icon</string>
</resources>
